upgrade JDK
- bump jdk version to 21
- bump spring boot to 3.3.3
- migrate from javax namespace to jakarta
- convert value classes to records
- declare sealed class hierarchies wherever appropriate